--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,11 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+platform_packages =
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32#master
 lib_deps = 
 	majicdesigns/MD_MAX72XX@^3.3.1
 	majicdesigns/MD_Parola@^3.6.2
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	https://github.com/me-no-dev/AsyncTCP.git
+	ayushsharma82/AsyncElegantOTA@^2.2.7
