--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,5 @@ lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	https://github.com/me-no-dev/AsyncTCP.git
 	ayushsharma82/AsyncElegantOTA@^2.2.7
+build_flags = -O3
+build_unflags = -Os
