new: added bmp280 temperature sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,5 +21,6 @@ lib_deps =
 	https://github.com/me-no-dev/AsyncTCP.git
 	ayushsharma82/AsyncElegantOTA@^2.2.7
 	bblanchon/ArduinoJson@^6.19.4
+	adafruit/Adafruit BMP280 Library@^2.6.8
 build_flags = -O3
 build_unflags = -Os
